fixed CSS issue of testimonials section not responsive in screens lower than 768px and tidied up code

--- a/assets/css/testimonials.css
+++ b/assets/css/testimonials.css
@@ -113,10 +113,8 @@ h3.testimonial-text {
   }
 
   #testimonial-carousel .carousel-item {
-    width: 100%;
-  }
-  #testimonial-carousel .carousel-item {
-    margin: 30px 20px;
+    width: 80%;
+    margin: 30px 5%;
   }
   .testimonial-text span {
     font-size: 1.6em;
@@ -140,10 +138,8 @@ h3.testimonial-text {
     margin: 30px 20px;
   }
   #testimonial-carousel .carousel-item {
-    margin: 15px 45%;
-  }
-  #testimonial-carousel .carousel-item {
-    margin-right: 12px;
+    width: 80%;
+    margin: 15px 5%;
   }
   .quote {
     width: 48%;
@@ -158,10 +154,8 @@ h3.testimonial-text {
     width: 65%;
   }
   #testimonial-carousel .carousel-item {
-    margin: 15px 38%;
-  }
-  #testimonial-carousel .carousel-item {
-    margin-right: 12px;
+    margin-top: 15px;
+    margin-bottom: 15px;
   }
   .testimonial-image {
     width: 16%;
@@ -176,10 +170,8 @@ h3.testimonial-text {
     width: 70%;
   }
   #testimonial-carousel .carousel-item {
-    margin: 10px 30%;
-  }
-  #testimonial-carousel .carousel-item {
-    margin-right: 12px;
+    margin: 10px 5%;
+    width: 80%;
   }
   .test-per em.testimonial-text {
     margin-top: 1.2em;
@@ -193,9 +185,7 @@ h3.testimonial-text {
     margin-top: 0.4em;
   }
   #testimonial-carousel .carousel-item {
-    margin: 10px 20%;
-  }
-  #testimonial-carousel .carousel-item {
-    margin-right: 12px;
+    margin: 10px 5%;
+    width: 80%;
   }
 }
